(+) add register system on master

--- a/master/frontend/templates/home.html
+++ b/master/frontend/templates/home.html
@@ -26,7 +26,10 @@
                 {{ form.password.errors }}
             </div>
             <button type="submit" class="btn">Se connecter</button>
+            <p>Vous n'avez pas encore de compte ? <a href="/signup">S'inscrire</a></p>
         </form>
+        
     </div>
+    
 </div>
 {% endblock %}
