--- a/master/server_creation/templates/server_creation/server_list.html
+++ b/master/server_creation/templates/server_creation/server_list.html
@@ -6,13 +6,10 @@
     <meta charset="UTF-8">
     <title>Liste des serveurs Tenant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-
 </head>
 <body class="bg-light">
 <div class="container py-5">
-  <h1 class="mb-4 text-center">Liste des serveurs Tenant</h1>
-  
+  <h1 class="mb-4 text-center">Liste des serveurs Tenant2</h1>
   {% if servers %}
     <div class="row">
       {% for server in servers %}
